[gd_scene load_steps=29 format=2]

[ext_resource path="res://Dark_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_000.png" type="Texture" id=2]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_001.png" type="Texture" id=3]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_002.png" type="Texture" id=4]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_005.png" type="Texture" id=5]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_000.png" type="Texture" id=6]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_002.png" type="Texture" id=7]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_001.png" type="Texture" id=8]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_003.png" type="Texture" id=9]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_004.png" type="Texture" id=10]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_007.png" type="Texture" id=11]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_006.png" type="Texture" id=12]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_008.png" type="Texture" id=13]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_009.png" type="Texture" id=14]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_010.png" type="Texture" id=15]
[ext_resource path="res://Dark Enemy/PNG Sequences/Dying/0_Demons_of_Darkness_Dying_011.png" type="Texture" id=16]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_003.png" type="Texture" id=17]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_004.png" type="Texture" id=18]
[ext_resource path="res://Dark Enemy/PNG Sequences/Slashing/0_Demons_of_Darkness_Slashing_005.png" type="Texture" id=19]
[ext_resource path="res://Dark Enemy/PNG Sequences/Running/0_Demons_of_Darkness_Running_000.png" type="Texture" id=20]
[ext_resource path="res://Dark Enemy/PNG Sequences/Running/0_Demons_of_Darkness_Running_001.png" type="Texture" id=21]
[ext_resource path="res://Dark Enemy/PNG Sequences/Running/0_Demons_of_Darkness_Running_002.png" type="Texture" id=22]
[ext_resource path="res://Dark Enemy/PNG Sequences/Running/0_Demons_of_Darkness_Running_003.png" type="Texture" id=23]
[ext_resource path="res://Dark Enemy/PNG Sequences/Running/0_Demons_of_Darkness_Running_004.png" type="Texture" id=24]
[ext_resource path="res://Visibility.gd" type="Script" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "run",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.1405, 16.6343 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 27.9003 )

[node name="Dark_Enemy" type="KinematicBody2D"]
position = Vector2( -21.3053, 1.27865 )
collision_layer = 256
collision_mask = 3
script = ExtResource( 1 )
detect_radius = 300

[node name="Dark_Enemy_Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.422884, -9.9663 )
scale = Vector2( 0.118225, 0.109709 )
frames = SubResource( 1 )
animation = "run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.62283 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Dark_Enemy_RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10.8582, -19.6132 )
enabled = true
collide_with_areas = true

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2
script = ExtResource( 25 )

[node name="CollisionShape2" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
